Add trampoline to restore page guard protection
Add parts of Capstone disassembler (https://github.com/aquynh/capstone) to calculate instruction size, which have to be copied into trampoline

--- a/memprotect.vcxproj
+++ b/memprotect.vcxproj
@@ -152,6 +152,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="memprotect.cpp" />
+    <ClCompile Include="X86DisassemblerDecoder.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="X86DisassemblerDecoder.h" />
+    <ClInclude Include="X86DisassemblerDecoderCommon.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="X86GenDisassemblerTables.inc" />
+    <None Include="X86GenInstrInfo.inc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
