Implement memprotect::Shutdown, move main() in main.cpp

--- a/memprotect.vcxproj
+++ b/memprotect.vcxproj
@@ -151,7 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="memprotect.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="memprotect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
